seo contrast ratio fix

--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -9,7 +9,7 @@
     color: var(--accent);
   }
   .dim {
-    color: #ffffff70;
+    color: #ffffff75;
   }
   .smol {
     font-size: 1rem;
